--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:04:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:05:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -604,22 +604,6 @@ Missed Cut</td>
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -2
-+2 thru 5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm(W) +1
--1 thru 15</td>
-      <td>Tiger Woods +2
-+3 thru 4</td>
-      <td class="greyout leftborder">Sam Burns +6
-+3 thru 17</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
@@ -650,22 +634,6 @@ Missed Cut</td>
 +1 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -2
--2 thru 4</td>
-      <td>Cameron Smith -2
-+2 thru 5</td>
-      <td>Justin Thomas +2
--2 thru 4</td>
-      <td>Tiger Woods +2
-+3 thru 4</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +3
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -700,6 +668,22 @@ Missed Cut</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -2
++2 thru 5</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +1
+-1 thru 15</td>
+      <td>Tiger Woods +3
++4 thru 5</td>
+      <td class="greyout leftborder">Sam Burns +6
++3 thru 17</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">1</td>
       <td>Joaquin Niemann -2
@@ -729,6 +713,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 14</td>
       <td class="greyout">Xander Schauffele(W) +6
++4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">1</td>
+      <td>Hideki Matsuyama -2
+-2 thru 4</td>
+      <td>Cameron Smith -2
++2 thru 5</td>
+      <td>Justin Thomas +2
+-2 thru 4</td>
+      <td>Rory McIlroy(W) +3
++2 thru 14</td>
+      <td class="greyout leftborder">Tiger Woods +3
++4 thru 5</td>
+      <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
     </tr>
     <tr>
@@ -844,22 +844,6 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Tiger Woods(W) +2
-+3 thru 4</td>
-      <td>Justin Thomas +2
--2 thru 4</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 14</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">4</td>
       <td>Patrick Cantlay -1
@@ -873,6 +857,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 15</td>
+      <td>Justin Thomas +2
+-2 thru 4</td>
+      <td>Tiger Woods(W) +3
++4 thru 5</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 14</td>
+      <td class="greyout">Viktor Hovland +4
 +4 thru 14</td>
     </tr>
     <tr>
@@ -940,22 +940,6 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa(W) -1
--2 thru 16</td>
-      <td>Justin Thomas +2
--2 thru 4</td>
-      <td>Tiger Woods +2
-+3 thru 4</td>
-      <td>Rory McIlroy +3
-+2 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">6</td>
       <td>Scottie Scheffler -2
@@ -1018,6 +1002,22 @@ Missed Cut</td>
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 4</td>
+      <td>Rory McIlroy +3
++2 thru 14</td>
+      <td>Tiger Woods +3
++4 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
