--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:05:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:06:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler -2
 +1 thru 3</td>
       <td>Tony Finau -2
 -1 thru 3</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
       <td>Will Zalatoris E
 +1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry E
@@ -157,33 +157,17 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -3
 +2 (F)</td>
       <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
+-2 thru 17</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
       <td>Justin Thomas +2
 -2 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 thru 14</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Tony Finau -2
--1 thru 3</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Jon Rahm(W) +1
--1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 14</td>
     </tr>
@@ -193,7 +177,7 @@ body {
       <td>Tony Finau -2
 -1 thru 3</td>
       <td>Collin Morikawa -1
--2 thru 16</td>
+-2 thru 17</td>
       <td>Will Zalatoris E
 +1 thru 15</td>
       <td>Daniel Berger +1
@@ -220,20 +204,20 @@ body {
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry E
--1 thru 7</td>
-      <td>Jon Rahm +1
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Tony Finau -2
+-1 thru 3</td>
+      <td>Collin Morikawa -1
+-2 thru 17</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
+      <td>Jon Rahm(W) +1
 -1 thru 15</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Tyrrell Hatton +2
-+2 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -268,22 +252,6 @@ body {
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -2
-+2 thru 5</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Rory McIlroy +3
-+2 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -300,12 +268,44 @@ body {
 +4 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith(W) -2
++2 thru 5</td>
+      <td>Collin Morikawa -1
+-2 thru 17</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
+      <td>Rory McIlroy +3
++2 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Collin Morikawa -1
--2 thru 16</td>
+-2 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 15</td>
       <td>Daniel Berger +1
@@ -333,11 +333,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Dustin Johnson -2
 +1 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
+      <td>Patrick Cantlay E
++2 thru 16</td>
       <td>Jon Rahm +1
 -1 thru 15</td>
       <td>Jordan Spieth(W) +4
@@ -383,7 +383,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">7</td>
       <td>Collin Morikawa -1
--2 thru 16</td>
+-2 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 15</td>
       <td>Patrick Reed +3
