--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:07:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:08:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,51 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -2
 +1 thru 3</td>
       <td>Tony Finau -2
 -1 thru 3</td>
+      <td>Will Zalatoris -1
+E thru 16</td>
       <td>Patrick Cantlay E
 +2 thru 16</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
       <td class="greyout leftborder">Shane Lowry E
 -1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Tony Finau -2
+-1 thru 3</td>
+      <td>Collin Morikawa -1
+-2 thru 17</td>
+      <td>Will Zalatoris -1
+E thru 16</td>
+      <td>Daniel Berger +1
++2 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -2
++2 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 16</td>
+      <td>Matthew Fitzpatrick E
++1 thru 14</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -167,41 +199,25 @@ body {
       <td>Justin Thomas +2
 -2 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 3</td>
-      <td>Collin Morikawa -1
--2 thru 17</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Daniel Berger +1
-+2 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -2
-+2 thru 5</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 14</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 3</td>
+      <td>Will Zalatoris -1
+E thru 16</td>
       <td>Shane Lowry E
 -1 thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Brooks Koepka +4
+      <td>Jon Rahm +1
+-1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 14</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -213,7 +229,7 @@ body {
       <td>Patrick Cantlay E
 +2 thru 16</td>
       <td>Jon Rahm(W) +1
--1 thru 15</td>
+-1 thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Brooks Koepka +4
@@ -236,22 +252,6 @@ body {
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 3</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Shane Lowry E
--1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 14</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -265,7 +265,7 @@ body {
       <td class="greyout leftborder">Rory McIlroy +3
 +2 thru 14</td>
       <td class="greyout">Viktor Hovland +4
-+4 thru 14</td>
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -277,11 +277,11 @@ body {
       <td>Shane Lowry E
 -1 thru 7</td>
       <td>Jon Rahm +1
--1 thru 15</td>
+-1 thru 16</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 4</td>
       <td class="greyout">Tyrrell Hatton +2
-+2 thru 17</td>
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -307,7 +307,7 @@ body {
       <td>Collin Morikawa -1
 -2 thru 17</td>
       <td>Jon Rahm +1
--1 thru 15</td>
+-1 thru 16</td>
       <td>Daniel Berger +1
 +2 thru 6</td>
       <td class="greyout leftborder">Robert MacIntyre +2
@@ -339,11 +339,11 @@ Missed Cut</td>
       <td>Patrick Cantlay E
 +2 thru 16</td>
       <td>Jon Rahm +1
--1 thru 15</td>
+-1 thru 16</td>
       <td>Jordan Spieth(W) +4
 +2 thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 14</td>
     </tr>
@@ -357,7 +357,7 @@ Missed Cut</td>
       <td>Justin Thomas +2
 -2 thru 4</td>
       <td>Viktor Hovland +4
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
@@ -369,7 +369,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Jon Rahm +1
--1 thru 15</td>
+-1 thru 16</td>
       <td>Justin Thomas(W) +2
 -2 thru 4</td>
       <td>Jordan Spieth +4
@@ -385,11 +385,11 @@ Missed Cut</td>
       <td>Collin Morikawa -1
 -2 thru 17</td>
       <td>Jon Rahm +1
--1 thru 15</td>
+-1 thru 16</td>
       <td>Patrick Reed +3
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 14</td>
       <td class="greyout">Luke List +7
