--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:09:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:10:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -246,10 +246,10 @@ E thru 16</td>
 +1 (F)</td>
       <td>Jordan Spieth +4
 +2 thru 14</td>
-      <td class="greyout leftborder">Xander Schauffele +6
-+4 thru 14</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 17</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -297,7 +297,7 @@ E thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 14</td>
       <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -327,7 +327,7 @@ E thru 16</td>
       <td>Russell Henley +3
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W) +6
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -361,7 +361,7 @@ Missed Cut</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
++4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -375,7 +375,7 @@ Missed Cut</td>
       <td>Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +6
-+4 thru 14</td>
++4 thru 15</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
