--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:25:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:26:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ E thru 17</td>
 +1 thru 4</td>
       <td>Will Zalatoris -1
 E thru 17</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td class="greyout leftborder">Shane Lowry E
+      <td>Shane Lowry E
 -1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 thru 17</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 5</td>
     </tr>
@@ -260,44 +260,12 @@ E thru 17</td>
 +2 thru 6</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td class="greyout leftborder">Shane Lowry E
--1 thru 7</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -2
-+2 thru 6</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 17</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
-+2 thru 6</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
       <td>Shane Lowry E
 -1 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -316,38 +284,6 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -2
-+2 thru 6</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Adam Scott +1
--1 thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
@@ -362,6 +298,22 @@ E thru 17</td>
 +2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -2
++2 thru 6</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -412,6 +364,22 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -2
++2 thru 6</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
@@ -444,14 +412,46 @@ E thru 17</td>
 +1 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -2
++2 thru 6</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Matthew Fitzpatrick E
++1 thru 15</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
       <td class="bigbold">-2</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Adam Scott +1
+-1 thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +4
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">-1</td>
       <td>Hideki Matsuyama -2
 -2 thru 5</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -461,13 +461,13 @@ Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Scottie Scheffler -2
 +1 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Patrick Cantlay(W) E
-+2 thru 16</td>
+      <td>Patrick Cantlay(W) +1
++3 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -477,83 +477,19 @@ Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -2
 +1 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout">Rory McIlroy +3
 +2 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 4</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -2
-+2 thru 6</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 4</td>
-      <td>Cameron Smith -2
-+2 thru 6</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Billy Horschel +3
-+1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -572,6 +508,38 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Tony Finau -2
+-1 thru 4</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
@@ -586,22 +554,6 @@ E thru 17</td>
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-+2 thru 6</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -620,20 +572,36 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
 +2 thru 6</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Shane Lowry E
--1 thru 7</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
+      <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 4</td>
+      <td>Cameron Smith -2
++2 thru 6</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Billy Horschel +3
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -668,6 +636,22 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -2
++2 thru 6</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">1</td>
       <td>Joaquin Niemann -2
@@ -684,22 +668,6 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -1
@@ -712,6 +680,22 @@ E thru 17</td>
 -2 thru 5</td>
       <td class="greyout leftborder">Rory McIlroy +3
 +2 thru 15</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -2
++2 thru 6</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Justin Thomas(W) +2
+-2 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
     </tr>
@@ -732,12 +716,28 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 5</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Justin Thomas +2
+-2 thru 5</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">3</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Rory McIlroy(W) +3
@@ -746,22 +746,6 @@ E thru 17</td>
 +4 thru 16</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -796,22 +780,6 @@ E thru 17</td>
 +4 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">3</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">3</td>
       <td>Scottie Scheffler -2
@@ -828,50 +796,18 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -2
 +1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Daniel Berger +1
-+2 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 5</td>
+      <td>Rory McIlroy +3
++2 thru 15</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">4</td>
-      <td>Scottie Scheffler -2
-+1 thru 4</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Justin Thomas(W) +2
--2 thru 5</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -892,12 +828,60 @@ Missed Cut</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay E
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">4</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Jordan Spieth(W) +4
 +2 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">4</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Jordan Spieth(W) +4
++2 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">5</td>
+      <td>Daniel Berger +1
++2 thru 7</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Justin Thomas(W) +2
+-2 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">5</td>
+      <td>Scottie Scheffler -2
++1 thru 4</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 5</td>
       <td>Brooks Koepka +4
@@ -940,6 +924,22 @@ E thru 17</td>
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Justin Thomas(W) +2
+-2 thru 5</td>
+      <td>Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">6</td>
       <td>Will Zalatoris -1
@@ -954,22 +954,6 @@ E thru 17</td>
 +1 thru 15</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
-      <td>Patrick Cantlay(W) E
-+2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -1034,6 +1018,22 @@ E thru 17</td>
 +4 thru 16</td>
       <td class="greyout">Gary Woodland +8
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">7</td>
+      <td>Patrick Cantlay(W) +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Justin Thomas +2
+-2 thru 5</td>
+      <td>Rory McIlroy +3
++2 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
