--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:25:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:26:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -148,10 +148,10 @@ body {
 -1 thru 4</td>
       <td>Will Zalatoris -1
 E thru 17</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td class="greyout leftborder">Shane Lowry E
+      <td>Shane Lowry E
 -1 thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++3 thru 17</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 5</td>
     </tr>
@@ -188,22 +188,6 @@ E thru 17</td>
 +1 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -3
-+2 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Justin Thomas +2
--2 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -2
@@ -218,22 +202,6 @@ E thru 17</td>
 +1 thru 15</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 4</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -252,6 +220,22 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -3
++2 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Justin Thomas +2
+-2 thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 16</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -268,36 +252,20 @@ E thru 17</td>
 +4 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Shane Lowry E
--1 thru 7</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 5</td>
-      <td class="greyout">Tyrrell Hatton +2
-+2 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-+2 thru 6</td>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Tony Finau -2
+-1 thru 4</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Patrick Cantlay E
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 16</td>
-      <td>Rory McIlroy +3
-+2 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +4
+      <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -316,6 +284,38 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry E
+-1 thru 7</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 5</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith(W) -2
++2 thru 6</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Rory McIlroy +3
++2 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 15</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">2</td>
       <td>Dustin Johnson -2
@@ -332,22 +332,6 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">3</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Patrick Cantlay E
-+2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 17</td>
-      <td>Jordan Spieth(W) +4
-+2 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
@@ -362,6 +346,22 @@ Missed Cut</td>
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">4</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Jon Rahm +1
+-1 thru 17</td>
+      <td>Jordan Spieth(W) +4
++2 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
