--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:31:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:31:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -620,22 +620,6 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">0</td>
-      <td>Joaquin Niemann -2
-+1 thru 6</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry(W) E
--1 thru 8</td>
-      <td>Brian Harman +3
-+1 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 16</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith -2
@@ -714,6 +698,22 @@ E thru 17</td>
 +4 thru 16</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">1</td>
+      <td>Joaquin Niemann -2
++1 thru 6</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry(W) E
+-1 thru 8</td>
+      <td>Viktor Hovland +4
++4 thru 16</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Brian Harman +5
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
