--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:31:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:32:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
       <td>Scottie Scheffler(W) -2
 +1 thru 5</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
       <td>Cameron Smith -2
 +2 thru 7</td>
       <td>Will Zalatoris -1
@@ -154,6 +154,22 @@ E thru 17</td>
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-8</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
+      <td>Talor Gooch -2
+-2 thru 8</td>
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 17</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -166,26 +182,26 @@ E thru 17</td>
 +1 thru 5</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-7</td>
-      <td>Talor Gooch -2
--2 thru 8</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Cameron Smith -2
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-6</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
+      <td>Cameron Smith(W) -2
 +2 thru 7</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
+      <td>Shane Lowry E
+-1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 17</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -200,8 +216,8 @@ E thru 17</td>
 E thru 17</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 (F)</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -236,22 +252,6 @@ E thru 17</td>
 -2 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -2
-+2 thru 7</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry E
--1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 17</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -2
@@ -266,6 +266,22 @@ E thru 17</td>
 +3 thru 17</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-4</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
+      <td>Cameron Smith(W) -2
++2 thru 7</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -326,9 +342,9 @@ E thru 17</td>
 E thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
     <tr>
@@ -376,24 +392,8 @@ E thru 17</td>
 +3 thru 17</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -2
-+2 thru 7</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 6</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -408,8 +408,8 @@ E thru 17</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -422,8 +422,8 @@ E thru 17</td>
 +1 thru 15</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -438,16 +438,16 @@ E thru 17</td>
 +3 thru 17</td>
       <td>Adam Scott +1
 -1 thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">-1</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
       <td>Patrick Cantlay +1
@@ -518,10 +518,26 @@ E thru 17</td>
 -1 thru 8</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Rory McIlroy(W) +2
++1 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Tiger Woods +3
++4 thru 6</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -534,9 +550,9 @@ E thru 17</td>
 -1 thru 17</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
     <tr>
@@ -582,8 +598,8 @@ E thru 17</td>
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -598,24 +614,8 @@ E thru 17</td>
 +3 thru 17</td>
       <td>Billy Horschel +3
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Cameron Smith -2
-+2 thru 7</td>
-      <td>Rory McIlroy(W) +2
-+1 thru 16</td>
-      <td>Justin Thomas +2
--2 thru 6</td>
-      <td class="greyout leftborder">Tiger Woods +3
-+4 thru 6</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -636,36 +636,20 @@ E thru 17</td>
 +5 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith(W) -2
-+2 thru 7</td>
-      <td>Scottie Scheffler -2
-+1 thru 5</td>
-      <td>Patrick Cantlay +1
-+3 thru 17</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">1</td>
-      <td>Joaquin Niemann -2
-+1 thru 6</td>
-      <td>Cameron Smith -2
-+2 thru 7</td>
+      <td>Hideki Matsuyama -3
+-3 thru 6</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 thru 16</td>
+      <td>Patrick Cantlay +1
++3 thru 17</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -680,8 +664,8 @@ E thru 17</td>
 -2 thru 6</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -696,8 +680,8 @@ E thru 17</td>
 -2 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -732,20 +716,36 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">BCREAMED</td>
       <td class="bigbold">2</td>
-      <td>Hideki Matsuyama -2
--2 thru 5</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
+      <td>Cameron Smith(W) -2
++2 thru 7</td>
+      <td>Scottie Scheffler -2
++1 thru 5</td>
       <td>Patrick Cantlay +1
 +3 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">2</td>
+      <td>Joaquin Niemann -2
++1 thru 6</td>
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
+      <td class="greyout">Xander Schauffele +7
++5 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -812,22 +812,6 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -2
-+1 thru 5</td>
-      <td>Will Zalatoris -1
-E thru 17</td>
-      <td>Justin Thomas(W) +2
--2 thru 6</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -1
@@ -856,8 +840,24 @@ Missed Cut</td>
 +2 thru 16</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">4</td>
+      <td>Scottie Scheffler -2
++1 thru 5</td>
+      <td>Will Zalatoris -1
+E thru 17</td>
+      <td>Justin Thomas(W) +2
+-2 thru 6</td>
+      <td>Brooks Koepka +5
++2 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -870,10 +870,10 @@ Missed Cut</td>
 -1 thru 17</td>
       <td>Jordan Spieth(W) +4
 +2 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 (F)</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -900,9 +900,9 @@ Missed Cut</td>
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td>Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
@@ -918,8 +918,8 @@ Missed Cut</td>
 +1 thru 16</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -948,9 +948,9 @@ E thru 17</td>
 +3 thru 17</td>
       <td>Justin Thomas(W) +2
 -2 thru 6</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td>Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
@@ -982,9 +982,9 @@ E thru 17</td>
 -2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
     <tr>
@@ -998,8 +998,8 @@ E thru 17</td>
 +1 thru 16</td>
       <td>Justin Thomas +2
 -2 thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -1014,9 +1014,9 @@ E thru 17</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
     <tr>
@@ -1028,9 +1028,9 @@ E thru 17</td>
 -1 thru 17</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td>Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
@@ -1052,22 +1052,6 @@ E thru 17</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">11</td>
-      <td>Jon Rahm(W) +1
--1 thru 17</td>
-      <td>Justin Thomas +2
--2 thru 6</td>
-      <td>Viktor Hovland +4
-+4 thru 16</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 thru 16</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">11</td>
       <td>Jon Rahm +1
@@ -1076,9 +1060,9 @@ Missed Cut</td>
 -2 thru 6</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
-      <td>Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td>Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
@@ -1093,6 +1077,22 @@ Missed Cut</td>
       <td>Viktor Hovland +4
 +4 thru 16</td>
       <td>Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 thru 16</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tony Muir</td>
+      <td class="bigbold">12</td>
+      <td>Jon Rahm(W) +1
+-1 thru 17</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td>Viktor Hovland +4
++4 thru 16</td>
+      <td>Brooks Koepka +5
 +2 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +7
 +5 thru 16</td>
