--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:31:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:32:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 17</td>
 +2 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -184,8 +184,8 @@ E thru 17</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -198,9 +198,9 @@ E thru 17</td>
 -1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 16</td>
+      <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
     </tr>
     <tr>
@@ -232,8 +232,8 @@ E thru 17</td>
 -2 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -264,8 +264,8 @@ E thru 17</td>
 +3 thru 17</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -278,8 +278,8 @@ E thru 17</td>
 +3 thru 17</td>
       <td>Rory McIlroy +2
 +1 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Xander Schauffele +7
 +5 thru 16</td>
     </tr>
@@ -360,8 +360,8 @@ Missed Cut</td>
 +2 thru 16</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 16</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -390,8 +390,8 @@ Missed Cut</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka +4
-+1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 16</td>
       <td class="greyout">Luke List +7
 +2 thru 9</td>
     </tr>
