--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:40:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:41:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ E thru 17</td>
       <td>Shane Lowry E
 -1 thru 8</td>
       <td class="greyout leftborder">Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 6</td>
     </tr>
@@ -204,6 +204,22 @@ E thru 17</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
++2 thru 7</td>
+      <td>Joaquin Niemann -2
++1 thru 7</td>
+      <td>Tommy Fleetwood(W) E
+-3 thru 8</td>
+      <td>Justin Thomas +2
+-2 thru 6</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 thru 16</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -2
@@ -227,29 +243,13 @@ E thru 17</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td>Justin Thomas +2
 -2 thru 6</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 thru 17</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -2
-+2 thru 7</td>
-      <td>Joaquin Niemann -2
-+1 thru 7</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 7</td>
-      <td>Justin Thomas +2
--2 thru 6</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 16</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -261,7 +261,7 @@ E thru 17</td>
       <td>Jon Rahm(W) +1
 -1 thru 17</td>
       <td>Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 17</td>
       <td class="greyout">Brooks Koepka +5
@@ -275,7 +275,7 @@ E thru 17</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
       <td>Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td>Rory McIlroy +2
 +1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka +5
@@ -309,7 +309,7 @@ E thru 17</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 6</td>
       <td class="greyout">Tyrrell Hatton +2
@@ -353,7 +353,7 @@ Missed Cut</td>
       <td>Dustin Johnson -2
 +1 (F)</td>
       <td>Patrick Cantlay +1
-+3 thru 17</td>
++3 (F)</td>
       <td>Jon Rahm +1
 -1 thru 17</td>
       <td>Jordan Spieth(W) +4
