--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:44:40 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:45:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -628,12 +628,12 @@ E (F)</td>
 +1 (F)</td>
       <td>Shane Lowry(W) E
 -1 thru 9</td>
-      <td>Viktor Hovland +4
+      <td>Brian Harman +4
++2 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 17</td>
-      <td class="greyout leftborder">Sam Burns +5
+      <td class="greyout">Sam Burns +5
 +2 (F)</td>
-      <td class="greyout">Brian Harman +5
-+3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
