--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:00:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:01:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -221,15 +221,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
 E thru 7</td>
       <td>Tony Finau -1
 E thru 7</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -237,15 +237,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -2
 +2 thru 8</td>
       <td>Hideki Matsuyama -2
 -2 thru 7</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
@@ -253,19 +253,35 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Dustin Johnson(W) -2
 +1 (F)</td>
       <td>Cameron Smith -2
 +2 thru 8</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -3
+E thru 7</td>
+      <td>Cameron Smith(W) -2
++2 thru 8</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -316,20 +332,36 @@ E thru 7</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Cameron Smith(W) -2
+      <td>Cameron Smith -2
 +2 thru 8</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Matthew Fitzpatrick E
++1 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 7</td>
       <td class="greyout">Brooks Koepka +5
 +2 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Tony Finau -1
+E thru 7</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Matthew Fitzpatrick E
++1 thru 17</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -396,36 +428,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith -2
-+2 thru 8</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 17</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 7</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Tony Finau -1
+      <td>Scottie Scheffler -3
 E thru 7</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 17</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +6
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka +5
++2 thru 17</td>
+      <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -438,22 +454,6 @@ Missed Cut</td>
 E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +5
 +2 thru 17</td>
       <td class="greyout">Jordan Spieth +6
@@ -556,6 +556,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -2
++2 thru 8</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +5
++2 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
@@ -570,6 +586,22 @@ E (F)</td>
 +3 thru 8</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">0</td>
+      <td>Joaquin Niemann -2
++1 thru 8</td>
+      <td>Shane Lowry(W) -1
+-2 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Brian Harman +4
++2 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -634,38 +666,6 @@ E thru 7</td>
 +2 thru 17</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -2
-+2 thru 8</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">1</td>
-      <td>Joaquin Niemann -2
-+1 thru 8</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry(W) E
--1 thru 9</td>
-      <td>Brian Harman +4
-+2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
