--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:00:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:01:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
 E thru 7</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau -1
 E thru 7</td>
-      <td>Shane Lowry E
--1 thru 9</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -157,15 +157,15 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith -2
 +2 thru 8</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 thru 17</td>
-      <td>Shane Lowry E
--1 thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 7</td>
       <td class="greyout">Brooks Koepka +5
@@ -173,13 +173,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -3
 E thru 7</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +5
@@ -268,6 +268,22 @@ E thru 7</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">1</td>
       <td>Collin Morikawa -1
@@ -298,22 +314,6 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry E
--1 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Tyrrell Hatton +2
-+2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
